# cortex

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DESIGN_SYSTEM.md  Makefile  README.md
api/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0dc4f89f3f3a_question_position_check_constraint.py  4facedd34e4d_add_placement_compute_claim_cor_75.py  7ab199ba95a2_drop_brand_membership_founder_unique_.py  7fe78ba34c24_brand_report.py  8e4ef4f9b295_initial_brand_identity_app_user_brand_.py  a1f4c8d2e3b5_brand_membership_founder_partial_unique.py  a2b3c4d5e6f7_brand_report_ui_state_table.py  a7b8c9d0e1f2_brand_voice.py  b8c9d0e1f2a3_weekly_questions.py  c3d4e5f6a7b8_brand_profile.py  c9d0e1f2a3b4_placement_schema.py  d4e5f6a7b8c9_brand_profile_analysis_job.py  e5f6a7b8c9d0_media_network.py  e65e2383b6c5_add_lang_to_brand_publisher_scope_and_.py  f6a7b8c9d0e1_brand_onboarded_at.py
api/scripts/: seed_demo_brand.sql  seed_media_network.sql  sync_media_network.py  sync_weekly_questions.py
api/src/cortex_api/: __init__.py  main.py
api/tests/integration/: README.md  __init__.py  conftest.py  test_analysis_job_repo.py  test_analyze_api.py  test_analyze_service.py  test_auth_flow.py  test_brand_list_api.py  test_brand_membership_founder_unique_migration.py  test_brand_onboarded_at_migration.py  test_brand_profile_api.py  test_brand_profile_repo.py  test_brand_report_api.py  test_brand_report_migration.py  test_brand_report_repo.py  test_brand_report_ui_state_api.py  test_eligible_brands_api.py  test_media_network_api.py  test_media_network_job.py  test_media_repos.py  test_pdf_api.py  test_placement_claim_repo.py  test_placement_claims_api.py  test_placement_composer.py  test_placement_compute_claim_migration.py  test_placement_schema.py  test_placement_schema_migration.py  test_questions_api.py  test_questions_job.py  test_questions_repos.py  test_voice_api.py  test_voice_job.py  test_voice_repo.py
api/tests/unit/: conftest.py  test_analysis_job_model.py  test_analyze_dto.py  test_analyze_mapping.py  test_analyze_provider.py  test_analyze_service_hook_b.py  (+35 more)
(+478 files in other folders)
