[project]
name = "cortex-api"
version = "0.1.0"
description = "Cortex insights gateway — FastAPI service for brand/publisher dashboards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "dependency-injector>=4.42.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",
    "greenlet>=3.0.0",
    "redis>=5.1.0",
    "databricks-sql-connector>=3.4.0",
    "databricks-sdk>=0.35.0",
    "databricks-vectorsearch>=0.40.0",
    "pyjwt[crypto]>=2.9.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "playwright>=1.47.0",
    "cortex-brand-extract>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "fakeredis>=2.25.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.uv.sources]
cortex-brand-extract = { path = "../packages/brand-extract", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_api"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
# E501: long lines; B008: FastAPI Depends/Query in defaults is idiomatic;
# N818: CortexException naming mirrors agent-will-smith's AgentException.
ignore = ["E501", "B008", "N818"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: integration tests requiring a real Postgres instance (run via `pytest -m integration`; skip locally with `pytest -m 'not integration'`)",
]

[tool.coverage.run]
source = ["src/cortex_api"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
